--- a/src/App.css
+++ b/src/App.css
@@ -103,3 +103,24 @@ body {
 .card--favorite {
   width: 50px;
 }
+.formFlex{
+  display: flex;
+  flex-direction: column;
+  gap:20px;
+  margin: 0 auto;
+ width: 70%;
+ margin: 0 auto;
+ justify-content: center;
+ height: 600px;
+}
+
+.formFlex input[type="text"],[type="email"]{
+  height: 40px;
+}
+
+.formFlex input[type="checkbox"]{
+display: flex;
+}
+.formFlex textarea{
+  height: 80px;
+}
