--- a/src/App.css
+++ b/src/App.css
@@ -103,24 +103,50 @@ body {
 .card--favorite {
   width: 50px;
 }
-.formFlex{
-  display: flex;
-  flex-direction: column;
-  gap:20px;
-  margin: 0 auto;
- width: 70%;
- margin: 0 auto;
- justify-content: center;
- height: 600px;
+
+
+.SignUp form {
+  border: 3px solid #f1f1f1;
 }
 
-.formFlex input[type="text"],[type="email"]{
-  height: 40px;
+.SignUp .container input {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
 }
 
-.formFlex input[type="checkbox"]{
-display: flex;
+
+
+.SignUp button {
+  background-color: #04AA6D;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
 }
-.formFlex textarea{
-  height: 80px;
+
+.SignUp button:hover {
+  opacity: 0.8;
+}
+
+
+
+.SignUp .imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+}
+
+
+.SignUp .container {
+  padding: 16px;
+}
+
+.SignUp span.psw {
+  float: right;
+  padding-top: 16px;
 }
